# dexter

./: CMakeLists.txt  README.md
config/: view.rviz  view_lidar_sim.rviz
dexter/: package.xml
dexter/description/: gazebo_control.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
dexter/description/mesh/: dexter_solidworks.stl
dexter/launch/: bot_sim.launch.py
launch/: generic_launch.py
scripts/: generic_spawn.py
